[package]
name = "fdsum"
version = "0.1.0"
edition = "2024"
authors = ["Elmar Pruesse <pruessee@njhealth.org>"]
description = "Calculate checksums on directories"
license = "GPL-3.0-or-later"
keywords = ["commandline", "checksum", "sha256", "blake3", "directory"]
categories = ["command-line-utilities"]


[dependencies]
anyhow = "1.0.98"
blake3 = "1.8.2"
byteorder = "1.5.0"
clap = { version = "4.5.40", features = ["derive"] }
generic-array = "1.2.0"
hex = "0.4.3"
hex-literal = "1.0.0"
md-5 = "0.10.6"
num_cpus = "1.17.0"
rayon = "1.10.0"
sha2 = "0.10.9"
typenum = "1.18.0"
